@@ -1797,7 +1797,7 @@ INSERT INTO graph_tree VALUES (1,1,'Default Tree');
 --
 
 CREATE TABLE graph_tree_items (
-  id smallint(5) unsigned NOT NULL auto_increment,
+  id mediumint(5) unsigned NOT NULL auto_increment,
   graph_tree_id smallint(5) unsigned NOT NULL default '0',
   local_graph_id mediumint(8) unsigned NOT NULL default '0',
   rra_id smallint(8) unsigned NOT NULL default '0',
